# api-banap-app

./: README.md  bootstrap.py  main.py  pyproject.toml
src/__seedwork/Domain/: entity.py
src/__seedwork/Infrastructure/Http/: request.py  response.py
src/analysis/Application/: adapters.py  usecases.py
src/analysis/Domain/: entities.py
src/analysis/Infra/Adapters/: NpkAnalisysRepositoryPostgresql.py  request_adapter.py  response_adapter.py
src/analysis/Infra/Database/: postgresql_connection.py
src/analysis/Infra/Factories/: npk_analysis_use_case_factory.py
src/analysis/Infra/Http/Api/: router.py
src/analysis/Infra/Http/Api/Controllers/: npk_analysis_controller.py
src/analysis/Infra/Http/Api/Repositories/: npk_analisys_repository_postgresql.py
src/rotate_image/Application/: adapters.py  usecases.py
src/rotate_image/Domain/: entites.py
src/rotate_image/Infra/Adapters/: RotationImageAdapter.py
src/rotate_image/Infra/Http/Api/: ImageRotateController.py
src/rotate_image/Infra/Http/Contracts/: BaseController.py
